--- a/spark_project_1.ipynb
+++ b/spark_project_1.ipynb
@@ -12,8 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "06b533bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## checking to see if upload is successful/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "246f6177",
    "metadata": {},
    "outputs": [],
    "source": []
